	  Command" mode. (DLR)
	- Rework so that goto is no longer needed, using do_writeout()
	  as a model. (DLR)
	- If file browsing succeeds, call statusq_abort() so that the
	  cursor position at the statusbar is reset. (DLR)
	- Add missing #ifdefs around the wrap_reset() call so that nano
	  compiles with wrapping disabled again. (DLR)
	- When inserting a file in non-multibuffer mode, preserve
	  placewewant as well as current_x, for consistency. (DLR)
  do_writeout()
	- Restructure if blocks for greater efficiency, using
	  do_insertfile() as a model. (DLR)
	- Simplify where possible, and use an int retval to hold the
	  return value instead of i. (DLR)
	- If file browsing succeeds, call statusq_abort() so that the
	  cursor position at the statusbar is reset. (DLR)
	- Remove unneeded calls to display_main_list(). (DLR)
  do_writeout_void()
	- Call display_main_list(), for consistency with
	  do_insertfile_void(). (DLR)
  write_file()
	- If we've tried to write to an unwritable file and we're not
	  prepending, tempname is NULL when it's passed to unlink().
	  This can cause problems if unlink() can't handle NULL, so
	  don't call it in that case. (David Benbennick)
  write_marked()
	- Remove check for MARK_ISSET's not being set. (DLR)
  open_prevfile(), open_nextfile()
	- Translate the "New Buffer" string when displaying "Switched
	  to" messages on the statusbar. (DLR)
- global.c:
  shortcut_init()
	- Remove redundant NANO_SMALL #ifdef. (DLR)
	- Change an erroneous _() around the "New Buffer" string to
	  N_(). (DLR)
	- Add new key aliases: F15 for "Mark Text" (DLR) and F16 for
	  "Where Is Next" (Chris).
	- Leave "Mark Text" and "Where Is Next" out entirely when
	  NANO_SMALL is defined.  Since they aren't in the visible main
	  list, there's no point in having them in but disabled. (DLR)
- nano.c:
  die_save_file()
	- Clarify the error message when there are too many backup files
	  and the current one can't be written. (DLR)
  help_init()